2007-12-05  Michael Hutchinson <mhutchinson@novell.com> 

	* mono-decoration.png, WelcomePageFallbackWidget.cs, mono-bg.png,
	  WelcomePageView.cs, WelcomePage.xsl, WelcomePageBrowser.cs,
	  WelcomePage.mdp, gtk-gui/generated.cs, gtk-gui/objects.xml,
	  gtk-gui/MonoDevelop.WelcomePage.WelcomePageFallbackWidget.cs,
	  gtk-gui/gui.stetic, Makefile.am, WelcomePageCommands.cs: New browserless
	  Welcome Page that activates when no IWebBrowser addin is available.
	  Changed theming mechanism slightly so browser and GTK# welcome pages
	  share as much as possible, including XML link definition file. Saves
	  almost 10MB of memory (though a lot of that was shared with Firefox
	  open).

2007-12-04  Lluis Sanchez Gual <lluis@novell.com> 

	* WelcomePage.mdp: Directory reorganization.

2007-12-03  Michael Hutchinson <mhutchinson@novell.com> 

	* WelcomePageView.cs: Use new LinkClicked event.

2007-12-03  Michael Hutchinson <mhutchinson@novell.com> 

	* WelcomePageView.cs: Second part of the fix for "Bug 345423 - project is
	  not a registered protocol".

2007-11-30  Michael Hutchinson <mhutchinson@novell.com> 

	* WelcomePageOptionPanel.cs, WelcomePageView.cs, WelcomePageCommands.cs: Use
	  abstracted BrowserService instead of GeckoSharp, so there's no longer a
	  hard dependency on a browser.

2007-11-12  Lluis Sanchez Gual <lluis@novell.com> 

	* WelcomePageView.cs: Don't destroy the html control when disposing the
	  welcome page. Fixes bug #339590.

2007-11-10  Lluis Sanchez Gual <lluis@novell.com> 

	* WelcomePage.css, WelcomePage.xsl: Cleanup. Removed many unused styles.
	  Align main table to the left.

2007-10-29  Lluis Sanchez Gual <lluis@novell.com> 

	* WelcomePage.addin.xml: Bump MD version.

2007-10-25  Lluis Sanchez Gual <lluis@novell.com> 

	* WelcomePageView.cs: Destroy the view widget when the view is disposed.

2007-10-23  Lluis Sanchez Gual <lluis@novell.com> 

	* WelcomePage.mdp: Project file names updated by change in MD path
	  functions.
